# get-music

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: picard.md  usage.md
gm/: cli.py  files.py  history.py  metadata.py  ssh.py  ui.py  youtube.py
journal/: 260320-opus-artwork-metadata-fix.md  260320-reliability-robustness-overhaul.md
src/gm/: __init__.py  cli.py  files.py  history.py  metadata.py  ssh.py  youtube.py
tests/: conftest.py  test_cli.py  test_files.py  test_history.py  test_metadata.py  test_ssh.py  test_ui.py  test_youtube.py
