[project]
name = "gm"
version = "0.1.0"
description = "CLI tool for adding music to a Navidrome instance"
requires-python = ">=3.12"
dependencies = ["mutagen>=1.47"]

[project.scripts]
gm = "gm.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "coverage>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["gm"]

[tool.coverage.report]
show_missing = true
